{
  "version": 4,
  "terraform_version": "0.14.2",
  "serial": 9,
  "lineage": "7d05270f-172c-e1e6-c94a-35e81e530181",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "ctb_web_server_identifier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:security-group/sg-0285b346da9d5571c",
            "description": "Security Group with no inbound rules",
            "filter": null,
            "id": "sg-0285b346da9d5571c",
            "name": "ctb_web_server_identifier_sg",
            "tags": {
              "Name": "ctb_web_server_identifier_sg"
            },
            "vpc_id": "vpc-09464e2788a470e04"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ctb_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:subnet/subnet-0b4a77fa3dc552e4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/23",
            "default_for_az": false,
            "id": "subnet-0b4a77fa3dc552e4f",
            "map_public_ip_on_launch": false,
            "owner_id": "058775512105",
            "state": "available",
            "tags": {
              "Name": "ctb_subnet_1"
            },
            "vpc_id": "vpc-09464e2788a470e04"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ctb_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:subnet/subnet-041c1d6772f778695",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/23",
            "default_for_az": false,
            "id": "subnet-041c1d6772f778695",
            "map_public_ip_on_launch": false,
            "owner_id": "058775512105",
            "state": "available",
            "tags": {
              "Name": "ctb_subnet_2"
            },
            "vpc_id": "vpc-09464e2788a470e04"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ctb_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:subnet/subnet-0c0aa8ba7fcb50753",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/23",
            "default_for_az": false,
            "id": "subnet-0c0aa8ba7fcb50753",
            "map_public_ip_on_launch": false,
            "owner_id": "058775512105",
            "state": "available",
            "tags": {
              "Name": "ctb_subnet_3"
            },
            "vpc_id": "vpc-09464e2788a470e04"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ctb_subnet_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:subnet/subnet-0dfa1fbccb14885b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/23",
            "default_for_az": false,
            "id": "subnet-0dfa1fbccb14885b8",
            "map_public_ip_on_launch": false,
            "owner_id": "058775512105",
            "state": "available",
            "tags": {
              "Name": "ctb_subnet_4"
            },
            "vpc_id": "vpc-09464e2788a470e04"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ctb_subnet_5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:subnet/subnet-08ba07b4512cac078",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.8.0/23",
            "default_for_az": false,
            "id": "subnet-08ba07b4512cac078",
            "map_public_ip_on_launch": false,
            "owner_id": "058775512105",
            "state": "available",
            "tags": {
              "Name": "ctb_subnet_5"
            },
            "vpc_id": "vpc-09464e2788a470e04"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ctb_subnet_6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:subnet/subnet-0a5d03e37645eb8ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.10.0/23",
            "default_for_az": false,
            "id": "subnet-0a5d03e37645eb8ee",
            "map_public_ip_on_launch": false,
            "owner_id": "058775512105",
            "state": "available",
            "tags": {
              "Name": "ctb_subnet_6"
            },
            "vpc_id": "vpc-09464e2788a470e04"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "cloudtechbitsvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:vpc/vpc-09464e2788a470e04",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-037d0efe360dfb40a",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-c60b46be",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09464e2788a470e04",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0805b5e91da6bb5b1",
            "ipv6_cidr_block": "2600:1f18:1d9b:2b00::/56",
            "main_route_table_id": "rtb-0ad84709d37488236",
            "owner_id": "058775512105",
            "state": "available",
            "tags": {
              "Name": "Cloud Tech Bits"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ctb_efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:security-group/sg-0fd485433d1bc9b24",
            "description": "Security Group for efs mount targets",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd485433d1bc9b24",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0285b346da9d5571c"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "ctb_efs_sg",
            "name_prefix": "",
            "owner_id": "058775512105",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ctb_efs_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09464e2788a470e04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.ctb_web_server_identifier",
            "data.aws_vpc.cloudtechbitsvpc"
          ]
        }
      ]
    }
  ]
}